0.22.2	UNRELEASED

 * Ship ``Cargo.lock``. (Jelmer Vernooĳ, #1287)

 * Ship ``tests/`` and ``testdata/`` in sdist. (Jelmer Vernooĳ, #1292)

0.22.1	2024-04-23

 * Handle alternate case for worktreeconfig setting (Will Shanks, #1285)

 * Ship rust files. (Jelmer Vernooĳ, #1287)

0.22.0	2024-04-22

 * Stop installing docs/ as part of package code. (Jelmer Vernooĳ, #1248)

 * Move tests to root. (Jelmer Vernooĳ, #1024)

 * Convert the optional C implementations to Rust.
   (Jelmer Vernooĳ)

0.21.7	2023-12-05
 * Fix NameError when encountering errors during HTTP operation.
   (Jelmer Vernooĳ, #1208)

 * Raise exception when default identity can't be found.
   (Jelmer Vernooĳ)

 * Add a dedicated exception class for unresolved
   deltas. (Jelmer Vernooĳ, #1221)

 * Support credentials in proxy URL. (Jelmer Vernooĳ, #1227)

 * Add ``dulwich.porcelain.for_each_ref``. (Daniele Trifirò)

0.21.6	2023-09-02

 * Convert _objects.c to rust.
   (Jelmer Vernooĳ)

 * index: Handle different stages of conflicted paths.
   (Kevin Hendricks, Jelmer Vernooĳ)

 * Improve LCA finding performance. (Kevin Hendricks)

 * client: Handle Content-Type with encoding set.
   (Antoine Lambert)

 * Only import _hashlib for type checking.
   (David Hotham)

 * Update docs regarding building dulwich without c bindings (#103)
   (Adam Plaice)

 * objects: Define a stricter return type for _parse_message
   (Vincent Lorentz)

 * Raise GitProtocolError when encountering HTTP Errors in
   HTTPGitClient. (Jelmer Vernooĳ, #1199)

0.21.5	2023-05-04

 * Be more tolerant to non-3-length tuple versions.
   (Jelmer Vernooĳ)

0.21.4.1	2023-05-04

 * Support ``core.symlinks=false``. (Jelmer Vernooĳ, #1169)

 * Deprecate ``dulwich.objects.parse_commit``.

 * Fix fetching into MemoryRepo. (Jelmer Vernooĳ, #1157)

 * Support ``init.defaultBranch`` config.
   (Jelmer Vernooĳ)

 * Fix ``ObjectStore.iterobjects_subset()`` when
   hex shas are passed for objects that live in packs.
   (Jelmer Vernooĳ, #1166)
